Resolved layout issues with new project titles

--- a/nextcloud/themes/ida/core/css/server.css
+++ b/nextcloud/themes/ida/core/css/server.css
@@ -451,6 +451,18 @@ span.nametext {
 
 span.fileactions {
 	padding-left: 50px;
+    z-index: 0;
+    background: white;
+}
+
+td.filesize {
+    background: white;
+    position: relative;
+    z-index: 999;
+}
+
+td.date {
+    background: white;
 }
 
 span.projectDetails {
@@ -458,6 +470,8 @@ span.projectDetails {
 	flex-grow: 4;
     position: relative;
     vertical-align: top;
+    overflow: hidden;
+    text-overflow: clip;
 }
 
 span.projectDetailsTight {
